--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
+    "firebase-functions": "^3.16.0",
+    "firebase-tools": "^10.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql-events": "0.0.11",
